# Check-Handling

./: .gitignore  CHANGELOG.md  Finanzas.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: Finanzas-0.1.0.0-inplace.conf  package.cache
lib/: CSV.hs  Data.hs  DataManipulation.hs  DataRetrieve.hs  Functionalities.hs  GtkExtension.hs  ShortCuts.hs  SignalHandlers.hs  UI.hs  Utilities.hs
