cabal-version:      3.0
name:               Finanzas
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             AlvaroDebernardi
maintainer:         alvarodebernardi1@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  GtkExtension
                     ,ShortCuts
                     ,Data
                     ,DataManipulation
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                      ,gtk
                      ,glib
                      ,mtl
                      ,time
    hs-source-dirs:   lib
    default-language: Haskell2010

executable Finanzas
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                      ,Finanzas
                      ,gtk
                      ,transformers
    hs-source-dirs:   app
    default-language: Haskell2010
